--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ ktorfit-call-converter = { module = "de.jensklingenberg.ktorfit:ktorfit-converte
 ktor-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-json = { module = "io.ktor:ktor-serialization-gson", version.ref = "ktor" }
 ktor-client-engine = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+compose-data-table = { module = "com.seanproctor:data-table-material3", version = "0.11.4" }
 
 [plugins]
 composeHotReload = { id = "org.jetbrains.compose.hot-reload", version.ref = "composeHotReload" }
